# scryglass

./: .env.example  .gitignore  README.md  mtga_collection_raw_20260313_230745.json  pyproject.toml  run.py
.github/workflows/: release.yml
advisor/: actions.py  advisor_engine.py  ci_check.py  collection_refresh.py  compile_rules.py  database.py  deck_lifecycle.py  deck_routes.py  deck_storage.py  enums.py  game_state.py  generate_rules.py  health_check.py  heuristics.py  llm_advisor.py  log_parser.py  log_watcher.py  models.py  regression_tests.py  replay_corpus.py  replay_diff.py  reporting.py  reranker.py  reranker_eval.py  rule_pruning.py  server.py  simulation.py  strategy.py  test_canonical_actions.py  test_deck_lifecycle.py  test_replay_reconstruction.py  test_utils.py  training_export.py  validate_strategy.py  version.py
data/: health_history.json  replay_diff_result.json
data/log_archive/: .gitignore
data/meta/: meta_decks.json
data/models/: reranker_v1.npz
data/replay_corpus/: golgari_midrange.json  mono_red_goblins.json  mono_white_lifegain.json
data/sample_decks/: README.md  arcane_aerialists_fdn.txt  cat_attack_fdn.txt  cold_blooded_killers_anb.txt  dimir_midrange.txt  goblins_everywhere_anb.txt  graveyard_gifts_fdn.txt  izzet_prowess.txt  keep_the_peace_anb.txt  large_and_in_charge_anb.txt  learn_from_land_fdn.txt  might_of_legion_fdn.txt  mono_green_landfall.txt  morbid_machinations_fdn.txt  ocean_might_anb.txt  path_of_power_fdn.txt  (+3 more)
docs/: adr_deck_lifecycle.md  collection_refresh_setup.md  design_deck_lifecycle.md  llama31_lora_plan.md  scryglass_forge_architecture.md
src-tauri/: Cargo.toml  build.rs  overlay_helper.swift  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  mtga_detect.rs  native_overlay.rs  sidecar.rs
static/: app.js  decks.html  index.html  loading.html  manage.html  overlay.html  review.html  setup.html  stats.html  style.css
tools/: backtest_recent.py  backup_db.py  build_and_test.sh  export_lora_dataset.py  export_replay.py  meta_poc.py  mtga_memory_reader.py  reextract_match.py  refresh_collection_snapshot.py  reparse_logs.py  simulate_match.py  smoke_test_binary.sh  update_meta.py
(+17 files in other folders)
