[project]
name = "scryglass"
version = "0.2.5"
description = "Real-time strategic advisor for Magic: The Gathering Arena"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "watchfiles>=1.0",
    "httpx>=0.28",
    "anthropic>=0.49",
    "python-dotenv>=1.0",
    "numpy>=1.26",
]

[tool.setuptools.packages.find]
include = ["advisor*"]
