[package]
name = "scryglass"
version = "0.1.0"
description = "MTGA Real-Time Play Advisor"
authors = ["Vladimir Balko"]
edition = "2021"

[lib]
name = "scryglass_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
